index.html -> add h2, p, difficulty select, category select (not all categories)

--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz App</title>
+    <title>General Knowledge Quiz App</title>
 </head>
+
 <body>
-    <h1></h1>
+    <h1>General Knowledge Quiz App</h1>
+    <h2>Test your knowledge!</h2>
+    <p>Select a category and difficulty to start!</p>
+
+    <label for="difficulty" id="difficulty-label">Choose a Difficulty:</label>
+
+    <select name="difficulties" id="difficulty-select">
+        <option value="">--Please choose an option--</option>
+        <option value="easy">Easy</option>
+        <option value="medium">Medium</option>
+        <option value="hard">Hard</option>
+    </select>
+
+    <br>
+    <br>
+
+    <label for="category-select" id="category-label">Choose a Category:</label>
+
+    <select name="categories" id="category-select">
+        <option value="">--Please choose an option--</option>
+        <option value="any">Any Category</option>
+        <option value="9">General Knowledge</option>
+        <option value="hard">Hard</option>
+    </select>
 </body>
+
 </html>
