index.html -> add id=begin-button

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <option value="32">Entertainment: Cartoon & Animations</option>
     </select>
 
-    <button>Begin</button>
+    <button id="begin-button">Begin</button>
 </body>
 
 </html>
