--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -56,6 +57,8 @@
     </select>
 
     <button id="begin-button">Begin</button>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
