--- a/results.html
+++ b/results.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Results</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Results</h1>
+
+    <button id="retry-button">Retry</button>
+    <button id="new-quiz-button">New Quiz</button>
+
+    <script src="results.js"></script>
 </body>
 </html>
