--- a/quiz.html
+++ b/quiz.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="question-area">
@@ -17,5 +18,8 @@
     <div id="progress-area">
 
     </div>
+
+    <button id="finish-button">Finish Quiz</button>
+    <script src="quiz.js"></script>
 </body>
 </html>
