--- a/quiz.html
+++ b/quiz.html
@@ -20,6 +20,7 @@
     </div>
 
     <button id="finish-button">Finish Quiz</button>
+    <script src="main.js"></script>
     <script src="quiz.js"></script>
 </body>
 </html>
