--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <label for="category-select" id="category-label">Choose a Category:</label>
 
     <select name="categories" id="category-select">
-        <option value="">--Please choose an option--</option>
+        <option value="" selected disabled>--Please choose an option--</option>
         <option value="any">Any Category</option>
         <option value="9">General Knowledge</option>
         <option value="10">Entertainment: Books</option>
@@ -50,7 +50,7 @@
     <label for="difficulty" id="difficulty-label">Choose a Difficulty:</label>
 
     <select name="difficulties" id="difficulty-select">
-        <option value="">--Please choose an option--</option>
+        <option value="" selected disabled>--Please choose an option--</option>
         <option value="easy">Easy</option>
         <option value="medium">Medium</option>
         <option value="hard">Hard</option>
