remove main.js call in quiz.js

--- a/quiz.html
+++ b/quiz.html
@@ -20,7 +20,7 @@
     </div>
 
     <button id="finish-button">Finish Quiz</button>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
     <script src="quiz.js"></script>
 </body>
 </html>
