add style to buttons; add header and main tags in index.html

--- a/index.html
+++ b/index.html
@@ -9,58 +9,62 @@
 </head>
 
 <body>
-    <h1>General Knowledge Quiz App</h1>
-    <h2>Test your knowledge!</h2>
-    <p>Select a category and difficulty to start!</p>
+    <header>
+        <h1>General Knowledge Quiz App</h1>
+        <h2>Test your knowledge!</h2>
+        <p>Select a category and difficulty to start!</p>
+    </header>
 
-    <label for="category-select" id="category-label">Choose a Category:</label>
+    <main>
+        <label for="category-select" id="category-label">Choose a Category:</label>
 
-    <select name="categories" id="category-select">
-        <option value="" selected disabled>--Please choose an option--</option>
-        <option value="any">Any Category</option>
-        <option value="9">General Knowledge</option>
-        <option value="10">Entertainment: Books</option>
-        <option value="11">Entertainment: Film</option>
-        <option value="12">Entertainment: Music</option>
-        <option value="13">Entertainment: Musicals & Theatres</option>
-        <option value="14">Entertainment: Television</option>
-        <option value="15">Entertainment: Video Games</option>
-        <option value="16">Entertainment: Board Games</option>
-        <option value="17">Science & Nature</option>
-        <option value="18">Science: Computers</option>
-        <option value="19">Science: Mathematics</option>
-        <option value="20">Mythology</option>
-        <option value="21">Sports</option>
-        <option value="22">Geography</option>
-        <option value="23">History</option>
-        <option value="24">Politics</option>
-        <option value="25">Art</option>
-        <option value="26">Celebrities</option>
-        <option value="27">Animals</option>
-        <option value="28">Vehicles</option>
-        <option value="29">Entertainment: Comics</option>
-        <option value="30">Science: Gadgets</option>
-        <option value="31">Entertainment: Japanese Anime & Manga</option>
-        <option value="32">Entertainment: Cartoon & Animations</option>
-    </select>
+        <select name="categories" id="category-select">
+            <option value="" selected disabled>--Please choose an option--</option>
+            <option value="any">Any Category</option>
+            <option value="9">General Knowledge</option>
+            <option value="10">Entertainment: Books</option>
+            <option value="11">Entertainment: Film</option>
+            <option value="12">Entertainment: Music</option>
+            <option value="13">Entertainment: Musicals & Theatres</option>
+            <option value="14">Entertainment: Television</option>
+            <option value="15">Entertainment: Video Games</option>
+            <option value="16">Entertainment: Board Games</option>
+            <option value="17">Science & Nature</option>
+            <option value="18">Science: Computers</option>
+            <option value="19">Science: Mathematics</option>
+            <option value="20">Mythology</option>
+            <option value="21">Sports</option>
+            <option value="22">Geography</option>
+            <option value="23">History</option>
+            <option value="24">Politics</option>
+            <option value="25">Art</option>
+            <option value="26">Celebrities</option>
+            <option value="27">Animals</option>
+            <option value="28">Vehicles</option>
+            <option value="29">Entertainment: Comics</option>
+            <option value="30">Science: Gadgets</option>
+            <option value="31">Entertainment: Japanese Anime & Manga</option>
+            <option value="32">Entertainment: Cartoon & Animations</option>
+        </select>
 
-    <br>
-    <br>
+        <br>
+        <br>
 
-    <label for="difficulty" id="difficulty-label">Choose a Difficulty:</label>
+        <label for="difficulty" id="difficulty-label">Choose a Difficulty:</label>
 
-    <select name="difficulties" id="difficulty-select">
-        <option value="" selected disabled>--Please choose an option--</option>
-        <option value="easy">Easy</option>
-        <option value="medium">Medium</option>
-        <option value="hard">Hard</option>
-    </select>
+        <select name="difficulties" id="difficulty-select">
+            <option value="" selected disabled>--Please choose an option--</option>
+            <option value="easy">Easy</option>
+            <option value="medium">Medium</option>
+            <option value="hard">Hard</option>
+        </select>
 
-    <br>
+        <br>
 
-    <button id="begin-button">Begin</button>
-
+        <button id="begin-button">Begin</button>
+    </div>
     <script src="main.js"></script>
+
 </body>
 
 </html>
