center the main

--- a/results.html
+++ b/results.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Results</h1>
+    <header>
+        <h1>Results</h1>
+    </header>
 
     <button id="retry-button">Retry</button>
     <button id="new-quiz-button">New Quiz</button>
