--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
         <br>
         <br>
 
+        <label for="question-amount" id="question-amount-label">Number of Questions:</label>
+        <input type="number" name="question-amount" id="question-amount" min="1" max="50" value="10">
+
+        <br>
+        <br>
+
         <label for="difficulty" id="difficulty-label">Choose a Difficulty:</label>
 
         <select name="difficulties" id="difficulty-select">
@@ -62,7 +68,9 @@
         <br>
 
         <button id="begin-button">Begin</button>
-    </div>
+    </main>
+
+    <!-- <footer>Created by Boris Yakimov</footer> -->
     <script src="main.js"></script>
 
 </body>
