remove Any category

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
         <select name="categories" id="category-select">
             <option value="" selected disabled>--Please choose an option--</option>
-            <option value="any">Any Category</option>
             <option value="9">General Knowledge</option>
             <option value="10">Entertainment: Books</option>
             <option value="11">Entertainment: Film</option>
@@ -50,7 +49,7 @@
         <br>
         <br>
 
-        <label for="question-amount" id="question-amount-label">Number of Questions:</label>
+        <label for="question-amount" id="question-amount-label">Number of Questions (between 1 and 50):</label>
         <input type="number" name="question-amount" id="question-amount" min="1" max="50" value="10">
 
         <br>
