--- a/quiz.html
+++ b/quiz.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div id="question-area">
-        <h3 class="">Question <span class="question-number"></span> of <span class="total-questions"></span></h3>
+        <h2>Category: <span class="game-variables"></span></h2>
+        <h3>Question <span id="question-number" class="game-variables"></span> of <span id="total-questions" class="game-variables"></span></h3>
     </div>
 
     <div id="options-area">
