--- a/quiz.html
+++ b/quiz.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div id="question-area">
-        <h2>Category: <span class="game-variables"></span></h2>
+        <h2>Category: <span id="display-category" class="game-variables"></span></h2>
+        <h2>Difficulty: <span id="display-difficulty" class="game-variables"></span></h2>
+
         <h3>Question <span id="question-number" class="game-variables"></span> of <span id="total-questions" class="game-variables"></span></h3>
     </div>
 
