--- a/quiz.html
+++ b/quiz.html
@@ -23,7 +23,7 @@
         
     </div>
 
-    <button id="finish-button">Finish Quiz</button>
+    <!-- <button id="finish-button">Finish Quiz</button> -->
     <!-- <script src="main.js"></script> -->
     <script src="quiz.js"></script>
 </body>
