fixed index problems; work on results.js

--- a/results.html
+++ b/results.html
@@ -9,6 +9,8 @@
 <body>
     <header>
         <h1>Results</h1>
+        <h2>You have answered <span></span> out of <span></span> questions correctly</h2>
+        <h2>Do you want to retry with the same questions or change the options and try a new quiz?</h2>
     </header>
 
     <button id="retry-button">Retry</button>
