--- a/results.html
+++ b/results.html
@@ -9,9 +9,13 @@
 <body>
     <header>
         <h1>Results</h1>
-        <h2>You have answered <span></span> out of <span></span> questions correctly</h2>
-        <h2>Do you want to retry with the same questions or change the options and try a new quiz?</h2>
     </header>
+
+    <main>
+        <h2>You have answered <span id="correct-answers"></span> out of <span id="number-of-questions"></span> questions correctly!</h2>
+        
+        <h2>Do you want to retry with the same questions or change the options and try a new quiz?</h2>
+    </main>
 
     <button id="retry-button">Retry</button>
     <button id="new-quiz-button">New Quiz</button>
