same questions -> same settings

--- a/results.html
+++ b/results.html
@@ -14,7 +14,7 @@
     <main>
         <h2>You have answered <span id="correct-answers"></span> out of <span id="number-of-questions"></span> questions correctly!</h2>
         
-        <h2>Do you want to retry with the same questions or change the options and try a new quiz?</h2>
+        <h2>Do you want to retry with the same settings or change the options and try a new quiz?</h2>
     </main>
 
     <button id="retry-button">Retry</button>
