--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <br>
         <br>
 
-        <label for="difficulty" id="difficulty-label">Choose a Difficulty:</label>
+        <label for="difficulty-select" id="difficulty-label">Choose a Difficulty:</label>
 
         <select name="difficulties" id="difficulty-select">
             <option value="" selected disabled>--Please choose an option--</option>
