--- a/quiz.html
+++ b/quiz.html
@@ -12,7 +12,7 @@
         <h2>Difficulty: <span id="display-difficulty" class="game-variables"></span></h2>
 
         <h3>Question <span id="question-number" class="game-variables"></span> of <span id="total-questions" class="game-variables"></span></h3>
-        <h3 id="question-text"></h3>
+        <h3 id="question-text">Question Text</h3>
     </div>
 
     <div id="options-area">
