buttons in results.html moved to <main>

--- a/quiz.html
+++ b/quiz.html
@@ -19,7 +19,7 @@
 
     </div>
 
-    <p id="feedback-text">Here you can see output...</p>
+    <p id="feedback-text">Here you can see feedback...</p>
     <div id="progress-area">
         
     </div>
