--- a/quiz.html
+++ b/quiz.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div id="question-area">
         <h2>Category: <span id="display-category" class="game-variables"></span></h2>
         <h2>Difficulty: <span id="display-difficulty" class="game-variables"></span></h2>
 
-        <h3>Question <span id="question-number" class="game-variables"></span> of <span id="total-questions" class="game-variables"></span></h3>
+        <h3>Question <span id="question-number" class="game-variables"></span> of <span id="total-questions"
+                class="game-variables"></span></h3>
         <h3 id="question-text">Question Text</h3>
     </div>
 
@@ -21,11 +24,12 @@
 
     <p id="feedback-text">Here you can see feedback...</p>
     <div id="progress-area">
-        
+
     </div>
 
     <!-- <button id="finish-button">Finish Quiz</button> -->
     <!-- <script src="main.js"></script> -->
     <script src="quiz.js"></script>
 </body>
+
 </html>
