--- a/results.html
+++ b/results.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Results</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Results</h1>
     </header>
 
     <main>
-        <h2>You have answered <span id="correct-answers"></span> out of <span id="number-of-questions"></span> questions correctly!</h2>
-        
+        <h2>You have answered <span id="correct-answers"></span> out of <span id="number-of-questions"></span> questions
+            correctly!</h2>
+
         <h2>Do you want to retry with the same settings or change the options and try a new quiz?</h2>
 
         <button id="retry-button">Retry</button>
         <button id="new-quiz-button">New Quiz</button>
     </main>
 
-    
+
 
     <script src="results.js"></script>
 </body>
+
 </html>
