change label name; attempt on timer

--- a/quiz.html
+++ b/quiz.html
@@ -23,9 +23,7 @@
     </div>
 
     <p id="feedback-text">Here you can see feedback...</p>
-    <div id="progress-area">
-
-    </div>
+    <p id="count-down"></p>
 
     <!-- <button id="finish-button">Finish Quiz</button> -->
     <!-- <script src="main.js"></script> -->
