more work on timers; replace apostrophe

--- a/quiz.html
+++ b/quiz.html
@@ -23,7 +23,7 @@
     </div>
 
     <p id="feedback-text">Here you can see feedback...</p>
-    <p id="count-down"></p>
+    <p id="count-down">Timer: <span class="game-variables"></span></p>
 
     <!-- <button id="finish-button">Finish Quiz</button> -->
     <!-- <script src="main.js"></script> -->
