hide question-progress when not enough questions

--- a/quiz.html
+++ b/quiz.html
@@ -17,7 +17,7 @@
         <h2>Category: <span id="display-category" class="game-variables"></span></h2>
         <h2>Difficulty: <span id="display-difficulty" class="game-variables"></span></h2>
 
-        <h3>Question <span id="question-number" class="game-variables"></span> of <span id="total-questions"
+        <h3 id="question-progress">Question <span id="question-number" class="game-variables"></span> of <span id="total-questions"
                 class="game-variables"></span></h3>
         <h3 id="question-text">Question Text</h3>
     </div>
